--- a/WishList/Views/Home/Index.cshtml
+++ b/WishList/Views/Home/Index.cshtml
@@ -1,1 +1,4 @@
 ﻿<h1>Hello</h1>
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+<a asp-action="Index" asp-controller="Item">View wishlist</a>
