--- a/WishList/Views/Item/Create.cshtml
+++ b/WishList/Views/Item/Create.cshtml
@@ -1,8 +1,14 @@
 ﻿@model WishList.Models.Item
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <h3>Add item to wishlist</h3>
+
 <form asp-action="create">
-    <input asp-for="Description"/>
-    <span asp-validation-for="Description" ></span>
+
+    <input asp-for="Description" />
+
+    <span asp-validation-for="Description"></span>
+
     <button type="submit">Add Item</button>
+
 </form>
